Time: 2 ms (75.64%), Space: 39.8 MB (52.78%) - LeetHub